qmllint: Fix accessing attached types with prefixes

When ever a attached type lookup fails we have check whether combining it with the next member would make it work.

Fixes: QTBUG-83762
Change-Id: I8d159ccc07442f3939b40ea5f6b737da18439615
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>